@@ -1,3 +1,9 @@
+2011-01-31  Jerry DeLisle  <jvdelisle@gcc.gnu.org>
+
+	PR libquadmath/47293
+	* gdtoa/qd_qnan.h: Fix NAN bit patterns.
+	* gdtoa/strtopQ.c (strtoflt128): Handle endianess with NAN.
+
 2011-01-17  Tobias Burnus  <burnus@net-b.de>
 
 	PR fortran/47295
